--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.2.0",
+    "lucide-vue-next": "^0.575.0",
+    "tailwindcss": "^4.2.0",
     "three": "^0.183.0",
     "vue": "^3.5.28"
   },
